[Fix] SASS :bug: tested reallinged h2 on small to medium to desktop view

--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -49,7 +49,7 @@ ul {
 
 /*temporary borders*/
 /*common parts*/
-
+/*
 .main-wrapper {
     border: solid brown;
 }
@@ -79,8 +79,10 @@ ul {
     &__li {
         border: solid blue;
     }
-}
+}*/
+
 /*main parts*/
+/*
 .intro{
     border: solid pink;
     &__loc {
@@ -145,11 +147,11 @@ ul {
         border: solid black;
 
     }
-}
+}*/
 
 /*menu page parts*/
 
-.image-section {
+/*.image-section {
     border: solid greenyellow;
 }
 
@@ -199,7 +201,7 @@ ul {
     &__check {
         border: solid tomato;
     }
-}
+}*/
 
 
 
