--- a/styles/sass/layout/_navigation.scss
+++ b/styles/sass/layout/_navigation.scss
@@ -90,11 +90,10 @@
     @include flex-column-center;
     //padding-right: 10px;
     //padding-left: 16px;
-    padding: 18px 10px 45px 10px;
+    padding: 18px 10px 45px 19px;
     }
    &__h2 {
        align-self: flex-start;
-       //margin-left: 2px;
    }
    &__list {
        //border: blue solid;
