--- a/styles/sass/layout/_primary_content.scss
+++ b/styles/sass/layout/_primary_content.scss
@@ -5,7 +5,7 @@
     padding: 25px 10px 35px 10px;
     &__h2{
         align-self: flex-start;
-        margin-left: 2px;
+        margin-left: 8px;
     }
 }
 
